TEST_PROGRAMS/INVALID/07/string_unclosed.go
package main
var s = "hello\n // Interpreted string, \n is transformed into newline
var s1 string = 'hello\n' // Raw string, \n appears as a '\' followed by 'n'
